# ah-disclosure-kit

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  config.example.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: A0_DOC_INDEX.md  A1_INSTALLATION_AND_USAGE.md  A2_UPDATE_LOCAL_INSTALL.md  A3_WORKFLOW.md  A4_MCP_TOOLS.md  B1_PDF_INGEST.md  B2_COMPANY_DATA.md  B3_HKEX.md  B4_PROSPECTUS.md  C1_TEST_PLAN.md  D1_DEVELOPMENT_PLAN_V1_0.md
examples/: A0_CLAUDE_CODE_COMMANDS.md  batch.example.csv  python_usage.py
scripts/: INSTALL_AND_CHECK.ps1  run_qa_acceptance.py
skills/ah-disclosure/: SKILL.md
skills/ah-disclosure/agents/: openai.yaml
skills/ah-disclosure/references/: Analysis_Protocol.md  Financial_Analysis.md  Operations.md  Troubleshooting.md
src/ah_disclosure/: __init__.py  cli.py  mcp_server.py  models.py
src/ah_disclosure/clients/: akshare_a_client.py  akshare_h_client.py  cninfo_client.py  eastmoney_ipo_client.py  hkex_client.py
src/ah_disclosure/core/: cache.py  config.py  errors.py  file_utils.py  logging.py  naming.py  paths.py  time_utils.py
src/ah_disclosure/identity/: __init__.py  a_symbol_resolver.py  bse_symbol_resolver.py  h_symbol_resolver.py  hkex_stockid_resolver.py  resolver.py
src/ah_disclosure/pdf/: candidate_files.py  completeness.py  downloader.py  identity.py  ingest.py  markdown.py  ocr.py  package.py  quality.py  table_extract.py  text_extract.py  vector_index.py
src/ah_disclosure/providers/: akshare_registry.py  dataframe_utils.py
src/ah_disclosure/services/: analysis_registry.py  analysis_service.py  batch_service.py  cache_audit_service.py  calculation_service.py  cleanup_service.py  company_data_service.py  disclosure_service.py  dossier_service.py  evidence_service.py  filing_pipeline.py  financial_query.py  local_search_service.py  pdf_ingest_service.py  prospectus_service.py  query_router.py  server_info_service.py  source_lookup.py
src/ah_disclosure/storage/: jsonl_store.py  sqlite_store.py
tests/: qa_acceptance_cases.json  qa_complex_cases.json  test_a_report_pipeline.py  test_a_symbol_resolver.py  test_advanced_financial_qa.py  test_akshare_a_cache.py  test_analysis_service.py  test_basic.py  test_batch_service.py  test_cache_audit.py  test_calculation_service.py  test_cleanup_service.py  test_cli.py  test_cli_encoding.py  test_cninfo_org_resolver.py  test_config_paths.py  test_download_only.py  test_downloader_validation.py  test_eastmoney_ipo_client.py  test_evidence_compact.py  test_file_utils.py  test_filing_pipeline.py  test_financial_statement_tieouts.py  test_h_cache.py  test_h_filing_lang.py  test_h_report_year.py  test_hkex_client.py  test_hkex_stockid_resolver.py  test_ingest_rebuild.py  test_local_search_service.py  test_management_analysis_transformations.py  test_mcp_download_routing.py  test_mcp_import.py  test_mcp_ingest_options.py  test_pdf_completeness.py  test_pdf_identity.py  test_pdf_ocr.py  test_pdf_package.py  test_pdf_text_quality.py  test_prospectus_service.py  (+8 more)
