[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ah-disclosure-kit"
version = "1.1.2"
description = "A/H-share disclosure documents, non-trading company data, PDF ingest, local search, and MCP tools."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "ah-disclosure contributors" }]
keywords = ["a-share", "h-share", "hkex", "cninfo", "prospectus", "pdf", "mcp", "finance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Topic :: Office/Business :: Financial",
  "Topic :: Text Processing :: Indexing",
]
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/hc938456/ah-disclosure-kit"
Repository = "https://github.com/hc938456/ah-disclosure-kit"
Issues = "https://github.com/hc938456/ah-disclosure-kit/issues"
Changelog = "https://github.com/hc938456/ah-disclosure-kit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
company-data = ["akshare>=1.16.0", "pandas>=2.0.0", "openpyxl>=3.1.0"]
mcp = ["mcp>=1.7.0"]
pdf = ["pymupdf>=1.24.0", "pypdf>=4.0.0"]
layout = ["pymupdf4llm>=0.0.17"]
table = ["pdfplumber>=0.11.0"]
ocr = ["pytesseract>=0.3.10"]
vector = []
dev = [
  "pytest>=8.0.0", "ruff>=0.5.0", "mypy>=1.8.0", "build>=1.2.0",
  "pillow>=10.0.0", "pytesseract>=0.3.10",
]
all = [
  "akshare>=1.16.0", "pandas>=2.0.0", "openpyxl>=3.1.0", "mcp>=1.7.0",
  "pymupdf>=1.24.0", "pymupdf4llm>=0.0.17", "pypdf>=4.0.0",
  "pdfplumber>=0.11.0", "pytesseract>=0.3.10",
  "pytest>=8.0.0", "ruff>=0.5.0", "mypy>=1.8.0", "build>=1.2.0",
  "pillow>=10.0.0",
]

[project.scripts]
ah-disclosure = "ah_disclosure.cli:main"
ah-disclosure-mcp = "ah_disclosure.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
